// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SideBarItem > should render 1`] = `
<DocumentFragment>
  <li
    class="relative cursor-pointer"
    data-testid="side-menu__item--plugin"
  >
    <div
      class="flex relative items-center px-5 h-12 rounded-lg transition-all group dark:hover:bg-theme-dark-950 dark:hover:text-theme-dark-50 hover:bg-theme-secondary-200 hover:text-theme-secondary-800"
    >
      <span
        class="font-semibold"
      >
        General
      </span>
    </div>
  </li>
</DocumentFragment>
`;

exports[`SideBarItem > should render as active 1`] = `
<DocumentFragment>
  <li
    class="relative cursor-default"
    data-testid="side-menu__item--plugin"
  >
    <div
      class="flex relative items-center px-5 h-12 rounded-lg transition-all group bg-theme-secondary-200 text-theme-primary-600 dark:bg-theme-dark-950 dark:text-theme-dark-50"
    >
      <span
        class="font-semibold"
      >
        General
      </span>
    </div>
  </li>
</DocumentFragment>
`;
